Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-132084
Legend data returns wrong colors for XYSeries
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P2: Important
Fix Version/s:
6.8.2
,
6.9.0 Beta1
,
6.10.0 FF
Affects Version/s:
6.9
Component/s:
Graphs: 2D
Labels:
None
Commits:
7de8bd5ff (dev), 78c325725 (6.9), b1bc3eab9 (6.8)
Description
Legend data doesn't account for themes
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Jere Tuliniemi
Reporter:
Jere Tuliniemi
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
10 Dec '24 08:46
Updated:
12 Dec '24 23:26
Resolved:
12 Dec '24 08:44
Gerrit Reviews
There are no open Gerrit changes
Show
There are 3 closed Gerrit changes
Hide
There are 3 closed Gerrit changes
Refactor color selection in PointRenderer
Gerrit Review:
Refactor color selection in PointRenderer
Gerrit Review:
Refactor color selection in PointRenderer
Gerrit Review: