Refactor color selection in PointRenderer

Pick-to: 6.9 6.8
Fixes: QTBUG-132084
Change-Id: I5fd7dcaa7fdef38a348eabbffa603056505cbc57
Reviewed-by: Owais Akhtar <owais.akhtar@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>